<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NFC Share</string>
    <string name="action_settings">Settings</string>
    <string name="shareTitle">Type in the Access Key to Share</string>
    <string name="accessTitle">Tap against Car NFC Tag</string>
    <string name="hint_message">Type in the Access Key</string>
    <string name="title_activity_reading_writing">ReadingWritingActivity</string>
    <string name="title_alert_dialog">What do you want to do with the tag?</string>
    <string name="write_button_label">Write</string>
    <string name="read_button_label">Read</string>
    <string name="accessUrCar">Access your Car</string>
    <string name="accessSharedCar">Access Shared Car</string>
    <string name="tapAgainstCar">Tap Phone Against Car to Access</string>
    <string name="NFC">Share using NFC (Tap against User phone)</string>
    <string name="network">Share using Network</string>
    <string name="share_button_label">Share</string>
    <string name="access_button_label">Access Car</string>
</resources>
