<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InitActivity">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/shareByNFC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NFC"
            android:onClick="onShareRadioButtonClicked"/>
        <EditText
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <RadioButton android:id="@+id/shareByNet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network"
            android:onClick="onShareRadioButtonClicked"/>
        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_button_label"
            android:onClick="shareKey"/>
    </RadioGroup>


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/accessUrCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessUrCar"
            android:onClick="onAccessRadioButtonClicked"/>
        <RadioButton android:id="@+id/accessSharedCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessSharedCar"
            android:onClick="onAccessRadioButtonClicked"/>
        <Button
            android:id="@+id/access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access_button_label"
            android:onClick="accessKey"/>
    </RadioGroup>

</RelativeLayout>